[package]
name = "zeta-abi"
version = "0.1.0"
edition = "2021"

[features]
mainnet = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-entrypoint", "cpi"]

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
solana-program = "1.9.13"
bytemuck = "1.4.0"
chainlink_solana = "1.0.0"

[workspace]
members = ["."]