[package]
name = "zeta-abi"
version = "0.2.0"
edition = "2021"
description = "Zeta DEX ABI"
homepage = "https://github.com/zetamarkets/zeta-abi"
repository = "https://github.com/zetamarkets/zeta-abi"
keywords = ["zet", "dex", "abi"]
license = "Apache-2.0"

[features]
mainnet = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-entrypoint", "cpi"]

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "<1.15.0"
bytemuck = "1.4.0"
chainlink_solana = "1.0.0"