[package]
name = "zeta-abi"
version = "1.0.0"
edition = "2021"
description = "Zeta DEX ABI"
homepage = "https://github.com/zetamarkets/zeta-abi"
repository = "https://github.com/zetamarkets/zeta-abi"
keywords = ["zeta", "dex", "abi", "defi"]
license = "Apache-2.0"
exclude = [
    ".github",
    ".gitignore",
]

[features]
mainnet = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-entrypoint", "cpi"]

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.14.16"
